a11y basics with aXe, fix color contrast, fix labels, fix alt-text, etc

--- a/css/main-responsive.css
+++ b/css/main-responsive.css
@@ -23,4 +23,14 @@
     margin-left: auto;
     margin-right: auto;
   }
+  header {
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  footer {
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
