--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body, td, th, p {
 	line-height: 1.5;
 }
 body {
-	background-color: #fdfdfd;
+	background-color: white;
 	margin: 0;
 	position: relative;
 }
@@ -21,7 +21,7 @@ ul, li {
 	color: #333;
 }
 a {
-	color: orange;
+  color: white;
 	text-decoration: none;
 }
 a:hover, a:focus {
@@ -29,7 +29,7 @@ a:hover, a:focus {
 	text-decoration: none;
 }
 a img{
-	border: none 0px #fff;
+	border: none;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
@@ -43,13 +43,14 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   min-height: 100%;
 }
 #footer {
-  background-color: #444;
-  color: #aaa;
+  background-color: #333;
+  color: white;
   font-size: 0.5em;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+  box-sizing: border-box;
 }
 /* === Navigation ====================== */
 nav {
@@ -72,13 +73,12 @@ nav h1 a {
 #map {
   height: 300px;
   width: 100%;
-  background-color: #ccc;
 }
 /* === Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
   height: 50px;
-  background-color: #3397DB;
+  background-color: #333;
   align-items: center;
 }
 .filter-options h2 {
@@ -91,15 +91,14 @@ nav h1 a {
 }
 .filter-options select {
   background-color: white;
-  border: 1px solid #fff;
+  border: 2px solid #bbb;
   font-family: Arial,sans-serif;
   font-size: 1em;
-  height: 35px;
-  letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
+  margin: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 10px;
   width: 40%;
   max-width: 400px;
+  z-index: 3;
 }
 
 /* === Restaurant Listing ====================== */
@@ -113,8 +112,8 @@ nav h1 a {
   flex-wrap: wrap;
 }
 #restaurants-list li {
-  background-color: #fff;
-  border: 2px solid #ccc;
+  background-color: white;
+  border: 2px solid #bbb;
   font-family: Arial,sans-serif;
   margin: 2px;
   min-height: 380px;
@@ -125,14 +124,13 @@ nav h1 a {
   width: 90%;
 }
 #restaurants-list .restaurant-img {
-  background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #B16316;
   font-family: Arial,sans-serif;
   font-size: 1em;
   font-weight: 200;
@@ -146,8 +144,8 @@ nav h1 a {
   font-size: 1em;
 }
 #restaurants-list li a {
-  background-color: orange;
-  border-bottom: 3px solid #eee;
+  background-color: #B16316;
+  border-bottom: 2px solid #bbb;
   color: #fff;
   display: inline-block;
   font-size: 0.8em;
