--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -9,7 +9,7 @@ body, td, th, p {
 	line-height: 1.25;
 }
 body {
-	background-color: #fdfdfd;
+	background-color: white;
 	margin: 0;
 }
 #maincontent {
@@ -22,7 +22,7 @@ img, embed, object, video {
 	max-width: 100%
 }
 a {
-	color: orange;
+	color: white;
 	text-decoration: none;
 }
 a:hover, a:focus {
@@ -30,7 +30,7 @@ a:hover, a:focus {
 	text-decoration: none;
 }
 a img{
-	border: none 0px #fff;
+	border: none;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
@@ -74,14 +74,13 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 10px;
 }
 .inside #map {
-  background-color: #ccc;
   height: 300px;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #B16316;
   font-family: Arial,sans-serif;
   font-size: 1.25em;
-  font-weight: 200;
+  font-weight: bold;
   letter-spacing: 0;
   margin: 10px 4px 10px 4px;
   text-transform: uppercase;
@@ -113,7 +112,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #B16316;
   font-size: 1em;
   font-weight: 300;
   margin: 6px 4px 6px 4px;
@@ -135,16 +134,17 @@ h1, h2, h3, h4, h5, h6 {
   width: 90%;
 }
 #restaurant-hours td {
-  color: #666;
+  color: #222;
   font-size: 0.75em;
 }
 #footer {
-  background-color: #444;
+  background-color: #333;
   color: #aaa;
   font-size: 0.5em;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+  box-sizing: border-box;
 }
   
